--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,10 +1,10 @@
 #MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/cinema
-db.user=root
-db.password=MySQLPassword
+db.driver=YOUR JDBC DRIVER HERE
+db.url=YOUR DB URL
+db.user=YOUR DB LOGIN
+db.password=YOUR DB PASSWORD
 
 #Hibernate properties
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
